--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://bukolastella.github.io/whatsapp-clone",
+  "homepage": "https://bukolastella.github.io/whatsapp_clone",
   "name": "whatsapp_clone",
   "version": "0.1.0",
   "private": true,
